--- a/src/main/resources/templates/student-edit.html
+++ b/src/main/resources/templates/student-edit.html
@@ -70,7 +70,9 @@
     </div>
 
     <form th:action="@{/students/update/{id}(id=${student.id})}" th:object="${student}" method="post">
-        <input type="hidden" th:value="${currentYear}" name="classroom.year">
+        <!-- Hidden input to carry the classroom ID -->
+        <input type="hidden" th:field="*{classroom.id}" />
+
         <div class="mb-3">
             <label for="name" class="form-label">Student Name</label>
             <input type="text" class="form-control" id="name" th:field="*{name}" required>
