--- a/src/main/resources/templates/subject-edit.html
+++ b/src/main/resources/templates/subject-edit.html
@@ -70,13 +70,16 @@
     </div>
 
     <form th:action="@{/subjects/update/{id}(id=${subject.id})}" th:object="${subject}" method="post">
-        <input type="hidden" th:value="${currentYear}" name="classroom.year">
+        <!-- Hidden input to carry the classroom ID -->
+        <input type="hidden" th:field="*{classroom.id}" />
+
         <div class="mb-3">
             <label for="name" class="form-label">Subject Name</label>
             <input type="text" class="form-control" id="name" th:field="*{name}" required>
         </div>
         <button type="submit" class="btn btn-yellow w-100">Update Subject</button>
     </form>
+</div>
 </div>
 </body>
 </html>
